# product-management

./: .gitignore  Dockerfile  README.md  passenger_wsgi.py  pyproject.toml  pytest.ini  requirements.txt  requirments.txt  vercel.json
apps/accounts/: admin.py  forms.py  middleware.py  models.py  serializers.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_initial.py  0003_alter_action_user.py  0004_alter_customuser_role.py  0005_customuser_company.py  0006_alter_customuser_profile_image.py  0007_customuser_primary_unit_alter_customuser_role.py
apps/accounts/templates/: base.html
apps/accounts/tests/: conftest.py  test_models.py  test_views.py
apps/inventory/: admin.py  models.py  urls.py  views.py
apps/inventory/migrations/: 0001_initial.py  0002_inventoryimage_inventory_icon.py  0003_remove_inventory_icon_inventorytype_icon.py
apps/maintenance/: admin.py  apps.py  filters.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
apps/maintenance/api/: views.py
apps/maintenance/migrations/: 0001_initial.py  0002_maintenancerequest_is_deleted.py  0003_maintenancerequest_user.py  0004_maintenancerequest_company.py  0005_issue_maintenance_item.py  0006_alter_maintenancerequest_issue.py  0007_alter_maintenancerequest_issue_details.py  0008_maintenancerequest_request_title.py  0009_alter_companytechnician_company_and_more.py  0010_maintenancerequest_problemimage_maintenancedetail.py  0011_alter_message_attachment.py  0018_notification.py  (+14 more)
core/: settings.py  urls.py
static/css/: style.css  volt.css
static/js/: volt.js
(+15 files in other folders)
